Ensure loan lookup placeholder text is visible in IE

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -13,5 +13,6 @@
 
   input.search-query {
     background-color: #fff;
+    color: #000;
   }
 }
